use Integer.valueOf() instead of new Integer()
git-svn-id: svn+ssh://evolvis.org/scmrepos/svn/veraweb@517 293e2372-0500-4244-b9aa-80dbbde7b6ea